--- a/public/create-room.html
+++ b/public/create-room.html
@@ -76,10 +76,30 @@
             color: var(--foreground);
             font-weight: 500;
         }
+
+        .add-room-button {
+            position: fixed;
+            top: 2rem;
+            right: 2rem;
+            background: var(--primary);
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            border: none;
+            font-size: 0.875rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: opacity 0.2s;
+        }
+
+        .add-room-button:hover {
+            opacity: 0.9;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <button class="add-room-button">Add Room</button>
         <div class="canvas-container">
             <canvas id="roomCanvas"></canvas>
         </div>
