--- a/public/create-room.html
+++ b/public/create-room.html
@@ -77,10 +77,18 @@
             font-weight: 500;
         }
 
-        .add-room-button {
+        .button-container {
             position: fixed;
             top: 2rem;
             right: 2rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            z-index: 10;
+        }
+
+        .add-room-button,
+        .save-room-button {
             background: var(--primary);
             color: white;
             padding: 0.75rem 1.5rem;
@@ -90,16 +98,26 @@
             font-weight: 500;
             cursor: pointer;
             transition: opacity 0.2s;
+            width: 100%;
         }
 
-        .add-room-button:hover {
+        .add-room-button:hover,
+        .save-room-button:hover {
             opacity: 0.9;
         }
+
+        .add-room-button {
+            position: static;
+        }
     </style>
+    <script type="module" src="/js/room-editor.js"></script>
 </head>
 <body>
     <div class="container">
-        <button class="add-room-button">Add Room</button>
+        <div class="button-container">
+            <button class="add-room-button">Add Room</button>
+            <button class="save-room-button">Save Floorplan</button>
+        </div>
         <div class="canvas-container">
             <canvas id="roomCanvas"></canvas>
         </div>
@@ -109,7 +127,7 @@
     </div>
 
     <script type="module">
-        import { RoomEditor } from './js/room-editor.js';
+        import { RoomEditor } from '/js/room-editor.js';
         new RoomEditor('roomCanvas', 'measurements');
     </script>
 </body>
